# PixelAI

./: README.md
Benchmark_Perceptual_Offline/: collect_mu_logs.py  int_traj_recorder.py  pixelAI.py  run_benchmark.py
Benchmark_Perceptual_Offline/Benchmark_core_real/: core_read_angles.csv
Benchmark_Perceptual_Offline/Benchmark_core_sim/: ganged_plots.py
Benchmark_Perceptual_Offline/Benchmark_mu1/: mu_0.csv  mu_10.csv  mu_11.csv  mu_12.csv  mu_13.csv  mu_15.csv  mu_16.csv  mu_18.csv  mu_19.csv  mu_22.csv  mu_25.csv  mu_26.csv  mu_27.csv  mu_3.csv  mu_30.csv  mu_31.csv  mu_35.csv  mu_38.csv  mu_39.csv  mu_42.csv  mu_46.csv  mu_48.csv  mu_49.csv  mu_5.csv  mu_6.csv  mu_7.csv
Benchmark_Perceptual_Offline/Benchmark_mu2/: mu_10.csv  mu_11.csv  mu_12.csv  mu_13.csv  mu_16.csv  mu_17.csv  mu_18.csv  mu_20.csv  mu_21.csv  mu_27.csv  mu_3.csv  mu_30.csv  mu_31.csv  mu_32.csv  mu_34.csv  mu_35.csv  mu_36.csv  mu_37.csv  mu_4.csv  mu_43.csv  mu_44.csv  mu_45.csv  mu_47.csv  mu_48.csv  mu_6.csv  mu_7.csv  mu_8.csv
Benchmark_Perceptual_Offline/Benchmark_mu3/: mu_1.csv  mu_13.csv  mu_14.csv  mu_15.csv  mu_16.csv  mu_2.csv  mu_20.csv  mu_21.csv  mu_25.csv  mu_26.csv  mu_28.csv  mu_32.csv  mu_33.csv  mu_34.csv  mu_36.csv  mu_4.csv  mu_41.csv  mu_42.csv  mu_44.csv  mu_47.csv  mu_48.csv  mu_49.csv  mu_6.csv  mu_8.csv
Benchmark_Perceptual_Offline/Conv_decoder_model/: __init__.py  conv_decoder.py
Benchmark_Perceptual_Offline/Conv_decoder_model/conv_decoder_real/: data_range.csv  trained_model
Benchmark_Perceptual_Offline/Conv_decoder_model/conv_decoder_sim/: data_range.csv  trained_model
Benchmark_Perceptual_Offline/Data_distribution/: mean.csv  random_samples.csv  sigma.csv
nao_simulation/catkin_ws/src/my_executables/: CMakeLists.txt  package.xml
nao_simulation/catkin_ws/src/my_executables/scripts/: READMe.txt  central_benchmark_active_inference.py  central_benchmark_monolithic.py  generate_cores.py  image_for_recorded_angles.py  pixelAI_old.py  process_data.py  saved_angles_kinesthetic.csv
nao_simulation/catkin_ws/src/my_executables/scripts/Benchmark_core_sim/: core_angles.csv  ganged_plots.py
nao_simulation/catkin_ws/src/my_executables/scripts/Benchmark_mu1/: mu_1.csv  mu_14.csv  mu_17.csv  mu_2.csv  mu_20.csv  mu_21.csv  mu_23.csv  mu_24.csv  mu_28.csv  mu_29.csv  mu_32.csv  mu_33.csv  mu_34.csv  mu_36.csv  mu_37.csv  mu_4.csv  mu_40.csv  mu_41.csv  mu_43.csv  mu_44.csv  mu_45.csv  mu_47.csv  mu_8.csv  mu_9.csv
nao_simulation/catkin_ws/src/my_executables/scripts/Benchmark_mu2/: mu_0.csv  mu_1.csv  mu_14.csv  mu_15.csv  mu_19.csv  mu_2.csv  mu_22.csv  mu_23.csv  mu_24.csv  mu_25.csv  mu_26.csv  mu_27.csv  mu_28.csv  mu_29.csv  mu_33.csv  mu_38.csv  mu_39.csv  mu_40.csv  mu_41.csv  mu_42.csv  mu_46.csv  mu_49.csv  mu_5.csv  mu_9.csv
nao_simulation/catkin_ws/src/my_executables/scripts/Benchmark_mu3/: mu_0.csv  mu_10.csv  mu_11.csv  mu_12.csv  mu_17.csv  mu_18.csv  mu_19.csv  mu_22.csv  mu_23.csv  mu_24.csv  mu_27.csv  mu_29.csv  mu_3.csv  mu_30.csv  mu_31.csv  mu_35.csv  mu_37.csv  mu_38.csv  mu_39.csv  mu_40.csv  mu_43.csv  mu_45.csv  mu_46.csv  mu_5.csv  mu_7.csv  mu_9.csv
nao_simulation/catkin_ws/src/my_executables/scripts/Conv_decoder_model/: eval_net.py  train_net.py
nao_simulation/catkin_ws/src/my_executables/scripts/Conv_decoder_model/conv_decoder_sim/: checkpoint_state
nao_simulation/catkin_ws/src/nao_meshes/: CHANGELOG.rst  CMakeLists.txt  README  package.xml
nao_simulation/catkin_ws/src/nao_meshes/debian_license/: README  preinst  templates
nao_simulation/catkin_ws/src/nao_meshes/meshes/casing/: lwrist_casing.dae  lwrist_casing.stl  rwrist_casing.dae  rwrist_casing.stl
nao_simulation/catkin_ws/src/nao_robot/nao_description/launch/: upload_nao.launch
nao_simulation/catkin_ws/src/nao_robot/nao_description/urdf/naoV40_generated_urdf/: naoGazebo.xacro  naoTransmission.xacro  nao_fingers.xacro  nao_head_camera.xacro  nao_robot.xacro  nao_torso.xacro
nao_simulation/catkin_ws/src/nao_virtual/nao_control/launch/: nao_control_position.launch  nao_control_position_skin.launch
nao_simulation/catkin_ws/src/nao_virtual/nao_gazebo_plugin/launch/: nao_gazebo.launch  nao_gazebo_skin.launch
